--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 body {
     color: #333;
     font-size: 12px;
-    background-color: #ecf0f5;
+    background-color: #fff;
 }
 
 body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, span, p, button, input, optgroup, select, textarea, label, a, pre, .tooltip, .popover {
