--- a/src/app/main/navbar/navbar.component.css
+++ b/src/app/main/navbar/navbar.component.css
@@ -1,7 +1,7 @@
 .navbar {
     height: 50px;
     padding: 0;
-    background-color: #fff;
+    background-color: #ecf0f5;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(0, 0, 0, 0.05);
 }
 
