--- a/src/app/main/full.component.html
+++ b/src/app/main/full.component.html
@@ -1,4 +1,4 @@
-<yk-navbar (collapse)="collapse($event)"></yk-navbar>
+<px-navbar (collapse)="collapse($event)"></px-navbar>
 <yk-sidebar [isCollapsed]="isCollapsed"></yk-sidebar>
 <div class="content" [class.sidebar-collapsed]="isCollapsed">
     <router-outlet></router-outlet>
