--- a/src/app/main/navbar/navbar.component.css
+++ b/src/app/main/navbar/navbar.component.css
@@ -1,7 +1,7 @@
 .navbar {
     height: 50px;
     padding: 0;
-    background-color: #ecf0f5;
+    background-color: #2c3e50;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(0, 0, 0, 0.05);
 }
 
@@ -9,8 +9,8 @@
     height: 50px;
     width: 200px;
     text-align: center;
-    color: #c4d0d9;
-    background-color: #1c2b36;
+    color: #fff;
+    background-color: #2c3e50;
     font-weight: 700;
     font-size: 20px;
     line-height: 50px;
@@ -25,6 +25,6 @@
     padding-top: 18px;
     padding-bottom: 18px;
     margin-left: 16px;
-    color: #363f44;
+    color: #fff;
     font-size: 14px;
 }
