--- a/src/app/main/navbar/navbar.component.html
+++ b/src/app/main/navbar/navbar.component.html
@@ -1,17 +1,29 @@
-<nav class="navbar navbar-fixed-top">
-  <a class="navbar-brand hidden-sm-down" [class.collapsed]="isCollapsed"
-     role="button" routerLink="/main">yk Components</a>
-  <ul class="nav navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" role="button" (click)="collapseSidebar($event)">
-        <i class="fa fa-dedent fa-fw"></i>
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" role="button" (click)="source()">源码</a>
-    </li>
-    <!--<li class="nav-item">
-        <a class="nav-link" role="button" routerLink="/venus">VENUS</a>
-    </li>-->
-  </ul>
-</nav>
+<header class="px-header">
+  <a role="button" class="logo" routerLink="/main">
+    <span class="logo-lg">
+      <img class="logo-img" src="../../../../public/images/PaletX-logo.png">
+      <b>PaletX</b> UI
+    </span>
+  </a>
+
+  <nav class="px-navbar">
+    <a class="px-navbar-link" role="button" (click)="collapseSidebar($event)">
+      <i class="fa fa-dedent fa-fw"></i>
+    </a>
+    <a class="px-navbar-link" role="button">
+      起步
+    </a>
+    <a class="px-navbar-link" role="button">
+      全局CSS样式
+    </a>
+    <a class="px-navbar-link" role="button">
+      Angular2组件库
+    </a>
+    <a class="px-navbar-link" role="button">
+      UX设计规范
+    </a>
+    <a class="px-navbar-link" role="button">
+      文档
+    </a>
+  </nav>
+</header>
