--- a/src/app/demo/button/button.component.html
+++ b/src/app/demo/button/button.component.html
@@ -1,37 +1,37 @@
 <h3>Button</h3>
-<yk-button [classType]="'primary'">primary</yk-button>
-<yk-button [classType]="'secondary'">secondary</yk-button>
-<yk-button [classType]="'success'" [i]="'plus'">创建</yk-button>
-<yk-button [classType]="'info'">info</yk-button>
-<yk-button [classType]="'warning'">warning</yk-button>
-<yk-button [classType]="'danger'">danger</yk-button>
-<yk-button [classType]="'link'">link</yk-button>
+<px-button [classType]="'primary'">primary</px-button>
+<px-button [classType]="'secondary'">secondary</px-button>
+<px-button [classType]="'success'" [i]="'plus'">创建</px-button>
+<px-button [classType]="'info'">info</px-button>
+<px-button [classType]="'warning'">warning</px-button>
+<px-button [classType]="'danger'">danger</px-button>
+<px-button [classType]="'link'">link</px-button>
 <br>
 <br>
-<yk-button [classType]="'primary-outline'">primary</yk-button>
-<yk-button [classType]="'secondary-outline'">secondary</yk-button>
-<yk-button [classType]="'success-outline'" [i]="'plus'">创建</yk-button>
-<yk-button [classType]="'info-outline'">info</yk-button>
-<yk-button [classType]="'warning-outline'">warning</yk-button>
-<yk-button [classType]="'danger-outline'">danger</yk-button>
-<br>
-<br>
-<br>
+<px-button [classType]="'primary-outline'">primary</px-button>
+<px-button [classType]="'secondary-outline'">secondary</px-button>
+<px-button [classType]="'success-outline'" [i]="'plus'">创建</px-button>
+<px-button [classType]="'info-outline'">info</px-button>
+<px-button [classType]="'warning-outline'">warning</px-button>
+<px-button [classType]="'danger-outline'">danger</px-button>
 <br>
 <br>
 <br>
-<yk-button [classType]="'primary'" [disabled]="true">primary</yk-button>
-<yk-button [classType]="'secondary'" [disabled]="true">secondary</yk-button>
-<yk-button [classType]="'success'" [i]="'plus'" [disabled]="true">创建</yk-button>
-<yk-button [classType]="'info'" [disabled]="true">info</yk-button>
-<yk-button [classType]="'warning'" [disabled]="true">warning</yk-button>
-<yk-button [classType]="'danger'" [disabled]="true">danger</yk-button>
-<yk-button [classType]="'link'" [disabled]="true">link</yk-button>
 <br>
 <br>
-<yk-button [classType]="'primary-outline'" [disabled]="true">primary</yk-button>
-<yk-button [classType]="'secondary-outline'" [disabled]="true">secondary</yk-button>
-<yk-button [classType]="'success-outline'" [i]="'plus'" [disabled]="true">创建</yk-button>
-<yk-button [classType]="'info-outline'" [disabled]="true">info</yk-button>
-<yk-button [classType]="'warning-outline'" [disabled]="true">warning</yk-button>
-<yk-button [classType]="'danger-outline'" [disabled]="true">danger</yk-button>
+<br>
+<px-button [classType]="'primary'" [disabled]="true">primary</px-button>
+<px-button [classType]="'secondary'" [disabled]="true">secondary</px-button>
+<px-button [classType]="'success'" [i]="'plus'" [disabled]="true">创建</px-button>
+<px-button [classType]="'info'" [disabled]="true">info</px-button>
+<px-button [classType]="'warning'" [disabled]="true">warning</px-button>
+<px-button [classType]="'danger'" [disabled]="true">danger</px-button>
+<px-button [classType]="'link'" [disabled]="true">link</px-button>
+<br>
+<br>
+<px-button [classType]="'primary-outline'" [disabled]="true">primary</px-button>
+<px-button [classType]="'secondary-outline'" [disabled]="true">secondary</px-button>
+<px-button [classType]="'success-outline'" [i]="'plus'" [disabled]="true">创建</px-button>
+<px-button [classType]="'info-outline'" [disabled]="true">info</px-button>
+<px-button [classType]="'warning-outline'" [disabled]="true">warning</px-button>
+<px-button [classType]="'danger-outline'" [disabled]="true">danger</px-button>
