--- a/src/app/demo/carousel/carousel.component.html
+++ b/src/app/demo/carousel/carousel.component.html
@@ -26,11 +26,11 @@
 </div>
 
 <br>
-<yk-button [classType]="'success'" (click)="c.prev()">上一张</yk-button>
-<yk-button [classType]="'success'" (click)="c.next()">下一张</yk-button>
-<yk-button [classType]="'success'" (click)="c.pause()">暂停</yk-button>
-<yk-button [classType]="'success'" (click)="c.cycle()">循环</yk-button>
-<yk-button [classType]="'success'" (click)="c.select('slide1')">选择第一张</yk-button>
-<yk-button [classType]="'success'" (click)="changeInterval(1000)">切换时间间隔为1秒</yk-button>
-<yk-button [classType]="'success'" (click)="stopKeyboard()">禁用键盘切换</yk-button>
-<yk-button [classType]="'success'" (click)="stopWrap()">禁止循环播放</yk-button>
+<px-button [classType]="'success'" (click)="c.prev()">上一张</px-button>
+<px-button [classType]="'success'" (click)="c.next()">下一张</px-button>
+<px-button [classType]="'success'" (click)="c.pause()">暂停</px-button>
+<px-button [classType]="'success'" (click)="c.cycle()">循环</px-button>
+<px-button [classType]="'success'" (click)="c.select('slide1')">选择第一张</px-button>
+<px-button [classType]="'success'" (click)="changeInterval(1000)">切换时间间隔为1秒</px-button>
+<px-button [classType]="'success'" (click)="stopKeyboard()">禁用键盘切换</px-button>
+<px-button [classType]="'success'" (click)="stopWrap()">禁止循环播放</px-button>
