--- a/src/app/demo/collapse/collapse.component.html
+++ b/src/app/demo/collapse/collapse.component.html
@@ -1,6 +1,6 @@
 <h3>Collapse</h3>
 
-<yk-button [classType]="'primary'" (click)="isCollapsed = !isCollapsed">切换折叠</yk-button>
+<px-button [classType]="'primary'" (click)="isCollapsed = !isCollapsed">切换折叠</px-button>
 <br>
 <br>
 <div [ngbCollapse]="isCollapsed">
