--- a/src/app/demo/input/input.component.html
+++ b/src/app/demo/input/input.component.html
@@ -1,4 +1,4 @@
 <h3>Input</h3>
-<yk-input [label]="'姓名'"></yk-input>
-<yk-input [label]="'毕业学校'"></yk-input>
-<yk-input [label]="'联系电话'"></yk-input>
+<px-input [label]="'姓名'"></px-input>
+<px-input [label]="'毕业学校'"></px-input>
+<px-input [label]="'联系电话'"></px-input>
