--- a/src/app/demo/popover/popover.component.html
+++ b/src/app/demo/popover/popover.component.html
@@ -40,6 +40,6 @@
                popoverTitle="我是标题"
                triggers="manual">我</a>有可以从外部触发的tooltip</p>
 <p>当前的popover打开状态为：{{p.isOpen()}}</p>
-<yk-button [classType]="'primary'" (click)="p.open()">点击触发popover</yk-button>
-<yk-button [classType]="'primary'" (click)="p.close()">点击关闭popover</yk-button>
-<yk-button [classType]="'primary'" (click)="p.toggle()">点击切换popover</yk-button>
+<px-button [classType]="'primary'" (click)="p.open()">点击触发popover</px-button>
+<px-button [classType]="'primary'" (click)="p.close()">点击关闭popover</px-button>
+<px-button [classType]="'primary'" (click)="p.toggle()">点击切换popover</px-button>
