--- a/src/app/demo/tab/tab.component.html
+++ b/src/app/demo/tab/tab.component.html
@@ -42,7 +42,7 @@
 <br>
 <br>
 <br>
-<yk-button [classType]="'success'" (click)="t1.select('bar1');t2.select('bar2')">从外部选择指定tab</yk-button>
+<px-button [classType]="'success'" (click)="t1.select('bar1');t2.select('bar2')">从外部选择指定tab</px-button>
 <br>
 <br>
 <br>
