--- a/src/app/shared/pxlib/modal/modal.component.html
+++ b/src/app/shared/pxlib/modal/modal.component.html
@@ -9,7 +9,7 @@
         <ng-content></ng-content>
     </div>
     <div class="modal-footer">
-        <yk-button [classType]="'primary'" (click)="_submit($event)">确认</yk-button>
-        <yk-button [classType]="'primary-outline'" (click)="c('Close click')">关闭</yk-button>
+        <px-button [classType]="'primary'" (click)="_submit($event)">确认</px-button>
+        <px-button [classType]="'primary-outline'" (click)="c('Close click')">关闭</px-button>
     </div>
 </template>
