--- a/src/app/demo/checkbox/checkbox.component.html
+++ b/src/app/demo/checkbox/checkbox.component.html
@@ -1,8 +1,8 @@
 <h3>Checkbox</h3>
-<yk-checkbox #ykCb [value]="'dedede'" (change)="change($event)">请选择我</yk-checkbox>
-<yk-checkbox [disabled]="true">我是未选、失效的</yk-checkbox>
-<yk-checkbox [checked]="true">已选择我</yk-checkbox>
-<yk-checkbox [disabled]="true" [checked]="true">我是已选、失效的</yk-checkbox>
+<px-checkbox #pxCb [value]="'dedede'" (change)="change($event)">请选择我</px-checkbox>
+<px-checkbox [disabled]="true">我是未选、失效的</px-checkbox>
+<px-checkbox [checked]="true">已选择我</px-checkbox>
+<px-checkbox [disabled]="true" [checked]="true">我是已选、失效的</px-checkbox>
 <br>
 <br>
-<p>当前的状态是：{{ykCb.checked}}</p>
+<p>当前的状态是：{{pxCb.checked}}</p>
