--- a/src/app/demo/table/table.component.html
+++ b/src/app/demo/table/table.component.html
@@ -1,4 +1,4 @@
 <h3>Table</h3>
-<yk-table #ykTable [columns]="columns" [datas]="datas" [index]="true" [checkbox]="true"></yk-table>
-<yk-button [classType]="'success'" (click)="getSelections()">获取已选数据</yk-button>
+<px-table #pxTable [columns]="columns" [datas]="datas" [index]="true" [checkbox]="true"></px-table>
+<px-button [classType]="'success'" (click)="getSelections()">获取已选数据</px-button>
 <p>{{selections}}</p>
