--- a/src/app/main/navbar/navbar.component.html
+++ b/src/app/main/navbar/navbar.component.html
@@ -7,7 +7,7 @@
   </a>
 
   <nav class="px-navbar">
-    <a class="px-navbar-link" role="button" (click)="collapseSidebar($event)">
+    <a class="px-navbar-link hidden-sm-down" role="button" (click)="collapseSidebar($event)">
       <i class="fa fa-dedent fa-fw"></i>
     </a>
     <a class="px-navbar-link" role="button">
