--- a/src/app/main/sidebar/sidebar.component.html
+++ b/src/app/main/sidebar/sidebar.component.html
@@ -1,17 +1,21 @@
+<aside class="px-sidebar-wrapper">
+  <div class="px-sidebar">
+
+  </div>
+</aside>
 
 
-
-
+<!--
 <div class="sidebar-wrapper" [class.is-visible]="isVisible" [class.sidebar-collapsed]="isCollapsed">
     <div class="list-group sidebar">
         <a role="button" class="list-group-item" routerLink="/main/demo/alert" routerLinkActive="active"
            (click)="isVisible=false">
             Alert
         </a>
-        <!--<a role="button" class="list-group-item" routerLink="/main/demo/box" routerLinkActive="active"
+        &lt;!&ndash;<a role="button" class="list-group-item" routerLink="/main/demo/box" routerLinkActive="active"
            (click)="isVisible=false">
             Box
-        </a>-->
+        </a>&ndash;&gt;
         <a role="button" class="list-group-item" routerLink="/main/demo/breadcrumb" routerLinkActive="active"
            (click)="isVisible=false">
             Breadcrumb
@@ -56,9 +60,9 @@
            (click)="isVisible=false">
             Popover
         </a>
-        <!--<a role="button" class="list-group-item" routerLink="/main/demo/radio" routerLinkActive="active">
+        &lt;!&ndash;<a role="button" class="list-group-item" routerLink="/main/demo/radio" routerLinkActive="active">
             Radio
-        </a>-->
+        </a>&ndash;&gt;
         <a role="button" class="list-group-item" routerLink="/main/demo/tab" routerLinkActive="active"
            (click)="isVisible=false">
             Tab
@@ -79,4 +83,4 @@
 </div>
 <div class="toggle hidden-md-up">
     <a role="button" (click)="isVisible = !isVisible"><i class="fa fa-navicon"></i></a>
-</div>
+</div>-->
