--- a/src/app/main/sidebar/sidebar.component.html
+++ b/src/app/main/sidebar/sidebar.component.html
@@ -1,6 +1,55 @@
 <aside class="px-sidebar-wrapper">
   <div class="px-sidebar">
-
+    <ul class="px-sidebar-menu">
+      <li routerLinkActive="active">
+        <a role="button" routerLink="/main/demo/alert">Alert</a>
+      </li>
+      <li routerLinkActive="active">
+        <a role="button" routerLink="/main/demo/box">Box</a>
+      </li>
+      <li routerLinkActive="active">
+        <a role="button" routerLink="/main/demo/breadcrumb">Breadcrumb</a>
+      </li>
+      <li routerLinkActive="active">
+        <a role="button" routerLink="/main/demo/button">Button</a>
+      </li>
+      <li routerLinkActive="active">
+        <a role="button" routerLink="/main/demo/carousel">Carousel</a>
+      </li>
+      <li routerLinkActive="active">
+        <a role="button" routerLink="/main/demo/checkbox">Checkbox</a>
+      </li>
+      <li routerLinkActive="active">
+        <a role="button" routerLink="/main/demo/collapse">Collapse</a>
+      </li>
+      <li routerLinkActive="active">
+        <a role="button" routerLink="/main/demo/datepicker">Datepicker</a>
+      </li>
+      <li routerLinkActive="active">
+        <a role="button" routerLink="/main/demo/dropdown">Dropdown</a>
+      </li>
+      <li routerLinkActive="active">
+        <a role="button" routerLink="/main/demo/form">Form</a>
+      </li>
+      <li routerLinkActive="active">
+        <a role="button" routerLink="/main/demo/modal">Modal</a>
+      </li>
+      <li routerLinkActive="active">
+        <a role="button" routerLink="/main/demo/popover">Popover</a>
+      </li>
+      <li routerLinkActive="active">
+        <a role="button" routerLink="/main/demo/tab">Tab</a>
+      </li>
+      <li routerLinkActive="active">
+        <a role="button" routerLink="/main/demo/table">Table</a>
+      </li>
+      <li routerLinkActive="active">
+        <a role="button" routerLink="/main/demo/timepicker">Timepicker</a>
+      </li>
+      <li routerLinkActive="active">
+        <a role="button" routerLink="/main/demo/tooltip">Tooltip</a>
+      </li>
+    </ul>
   </div>
 </aside>
 
