--- a/public/css/px-styles/sidebar.css
+++ b/public/css/px-styles/sidebar.css
@@ -19,3 +19,34 @@
     overflow-y: scroll;
     overflow-x: hidden;
 }
+
+.px-sidebar-menu {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.px-sidebar-menu li {
+    position: relative;
+    margin: 0;
+    padding: 0;
+}
+
+.px-sidebar-menu li a {
+    position: relative;
+    padding: 12px 5px 12px 20px;
+    display: block;
+    color: #444;
+    font-weight: 600;
+    border-left: 3px solid transparent;
+    font-size: 14px;
+}
+
+.px-sidebar-menu li:hover a,
+.px-sidebar-menu li.active a {
+    color: #000;
+    border-left-color: #2c3e50;
+    background: #f4f4f5;
+    font-weight: 600;
+    text-decoration: none;
+}
