--- a/src/app/main/navbar/navbar.component.html
+++ b/src/app/main/navbar/navbar.component.html
@@ -8,7 +8,7 @@
 
   <nav class="px-navbar">
     <a class="px-navbar-link hidden-sm-down" role="button" (click)="collapseSidebar($event)">
-      <i class="fa fa-dedent fa-fw"></i>
+      <i class="fa fa-bars fa-fw"></i>
     </a>
     <a class="px-navbar-link" role="button">
       起步
