--- a/src/app/main/sidebar/sidebar.component.html
+++ b/src/app/main/sidebar/sidebar.component.html
@@ -4,9 +4,9 @@
       <li routerLinkActive="active">
         <a role="button" routerLink="/main/demo/alert">Alert</a>
       </li>
-      <li routerLinkActive="active">
+      <!--<li routerLinkActive="active">
         <a role="button" routerLink="/main/demo/box">Box</a>
-      </li>
+      </li>-->
       <li routerLinkActive="active">
         <a role="button" routerLink="/main/demo/breadcrumb">Breadcrumb</a>
       </li>
