--- a/public/css/px-styles/sidebar.css
+++ b/public/css/px-styles/sidebar.css
@@ -9,6 +9,7 @@
     z-index: 1030;
     width: 200px;
     overflow: hidden;
+    border-right: 1px solid #d2d6de;
 }
 
 .px-sidebar {
@@ -16,6 +17,7 @@
     background-color: #f9fafc;
     width: 217px;
     height: 100%;
+    padding-bottom: 10px;
     overflow-y: scroll;
     overflow-x: hidden;
 }
@@ -37,7 +39,7 @@
     padding: 12px 5px 12px 20px;
     display: block;
     color: #444;
-    font-weight: 600;
+    font-weight: 300;
     border-left: 3px solid transparent;
     font-size: 14px;
 }
