--- a/src/app/main/navbar/navbar.component.html
+++ b/src/app/main/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <header class="px-header">
-  <a role="button" class="logo" routerLink="/main">
+  <a role="button" class="logo" routerLink="/main" [class.px-header-logo-collapsed]="isCollapsed">
     <span class="logo-lg">
       <img class="logo-img" src="../../../../public/images/PaletX-logo.png">
       <b>PaletX</b> UI
