--- a/public/css/px-styles/header.css
+++ b/public/css/px-styles/header.css
@@ -38,7 +38,6 @@
     background-color: #2c3e50;
     color: #fff;
     display: block;
-    margin-left: 200px;
     border: none;
     z-index: 1000;
     height: 50px;
@@ -55,4 +54,8 @@
 .px-navbar .px-navbar-link:hover {
     color: #f6f6f6;
     background-color: rgba(255, 255, 255, 0.1);
+}
+
+.px-header-logo-collapsed {
+    width: 0 !important;
 }
