--- a/src/app/main/navbar/navbar.component.html
+++ b/src/app/main/navbar/navbar.component.html
@@ -1,6 +1,12 @@
 <header class="px-header">
-  <a role="button" class="logo" routerLink="/main" [class.px-header-logo-collapsed]="isCollapsed">
-    <span class="logo-lg">
+  <a role="button" class="logo-mini hidden-md-up" routerLink="/main">
+    <span>
+      <img class="logo-img" src="../../../../public/images/PaletX-logo.png">
+      <b>PX</b>
+    </span>
+  </a>
+  <a role="button" class="logo-lg hidden-sm-down" routerLink="/main">
+    <span>
       <img class="logo-img" src="../../../../public/images/PaletX-logo.png">
       <b>PaletX</b> UI
     </span>
