--- a/src/app/main/sidebar/sidebar.component.html
+++ b/src/app/main/sidebar/sidebar.component.html
@@ -1,13 +1,10 @@
-<aside class="px-sidebar-wrapper" [class.px-is-visible]="isVisible"
+<aside class="px-sidebar-wrapper" [class.px-sidebar-is-visible]="isVisible"
        [class.px-sidebar-collapsed]="isCollapsed">
   <div class="px-sidebar">
     <ul class="px-sidebar-menu">
       <li routerLinkActive="active">
         <a role="button" routerLink="/main/demo/alert">Alert</a>
       </li>
-      <!--<li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/box">Box</a>
-      </li>-->
       <li routerLinkActive="active">
         <a role="button" routerLink="/main/demo/breadcrumb">Breadcrumb</a>
       </li>
@@ -54,83 +51,6 @@
   </div>
 </aside>
 
-
-<!--
-<div class="sidebar-wrapper" [class.is-visible]="isVisible" [class.sidebar-collapsed]="isCollapsed">
-    <div class="list-group sidebar">
-        <a role="button" class="list-group-item" routerLink="/main/demo/alert" routerLinkActive="active"
-           (click)="isVisible=false">
-            Alert
-        </a>
-        &lt;!&ndash;<a role="button" class="list-group-item" routerLink="/main/demo/box" routerLinkActive="active"
-           (click)="isVisible=false">
-            Box
-        </a>&ndash;&gt;
-        <a role="button" class="list-group-item" routerLink="/main/demo/breadcrumb" routerLinkActive="active"
-           (click)="isVisible=false">
-            Breadcrumb
-        </a>
-        <a role="button" class="list-group-item" routerLink="/main/demo/button" routerLinkActive="active"
-           (click)="isVisible=false">
-            Button
-        </a>
-        <a role="button" class="list-group-item" routerLink="/main/demo/carousel" routerLinkActive="active"
-           (click)="isVisible=false">
-            Carousel
-        </a>
-        <a role="button" class="list-group-item" routerLink="/main/demo/checkbox" routerLinkActive="active"
-           (click)="isVisible=false">
-            Checkbox
-        </a>
-        <a role="button" class="list-group-item" routerLink="/main/demo/collapse" routerLinkActive="active"
-           (click)="isVisible=false">
-            Collapse
-        </a>
-        <a role="button" class="list-group-item" routerLink="/main/demo/datepicker" routerLinkActive="active"
-           (click)="isVisible=false">
-            Datepicker
-        </a>
-        <a role="button" class="list-group-item" routerLink="/main/demo/dropdown" routerLinkActive="active"
-           (click)="isVisible=false">
-            Dropdown
-        </a>
-        <a role="button" class="list-group-item" routerLink="/main/demo/form" routerLinkActive="active"
-           (click)="isVisible=false">
-            Form
-        </a>
-        <a role="button" class="list-group-item" routerLink="/main/demo/input" routerLinkActive="active"
-           (click)="isVisible=false">
-            Input
-        </a>
-        <a role="button" class="list-group-item" routerLink="/main/demo/modal" routerLinkActive="active"
-           (click)="isVisible=false">
-            Modal
-        </a>
-        <a role="button" class="list-group-item" routerLink="/main/demo/popover" routerLinkActive="active"
-           (click)="isVisible=false">
-            Popover
-        </a>
-        &lt;!&ndash;<a role="button" class="list-group-item" routerLink="/main/demo/radio" routerLinkActive="active">
-            Radio
-        </a>&ndash;&gt;
-        <a role="button" class="list-group-item" routerLink="/main/demo/tab" routerLinkActive="active"
-           (click)="isVisible=false">
-            Tab
-        </a>
-        <a role="button" class="list-group-item" routerLink="/main/demo/table" routerLinkActive="active"
-           (click)="isVisible=false">
-            Table
-        </a>
-        <a role="button" class="list-group-item" routerLink="/main/demo/timepicker" routerLinkActive="active"
-           (click)="isVisible=false">
-            Timepicker
-        </a>
-        <a role="button" class="list-group-item" routerLink="/main/demo/tooltip" routerLinkActive="active"
-           (click)="isVisible=false">
-            Tooltip
-        </a>
-    </div>
+<div class="px-sidebar-toggle hidden-md-up">
+  <a role="button" (click)="isVisible = !isVisible"><i class="fa fa-navicon"></i></a>
 </div>
-<div class="toggle hidden-md-up">
-    <a role="button" (click)="isVisible = !isVisible"><i class="fa fa-navicon"></i></a>
-</div>-->
