--- a/src/app/main/sidebar/sidebar.component.html
+++ b/src/app/main/sidebar/sidebar.component.html
@@ -52,5 +52,5 @@
 </aside>
 
 <div class="px-sidebar-toggle hidden-md-up">
-  <a role="button" (click)="isVisible = !isVisible"><i class="fa fa-navicon"></i></a>
+  <a role="button" (click)="isVisible = !isVisible"><i class="fa fa-bars"></i></a>
 </div>
