--- a/src/app/main/sidebar/sidebar.component.html
+++ b/src/app/main/sidebar/sidebar.component.html
@@ -3,49 +3,94 @@
   <div class="px-sidebar">
     <ul class="px-sidebar-menu">
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/alert">Alert</a>
+        <a role="button" routerLink="/main/demo/alert">
+          <i class="fa fa-circle-o"></i>
+          <span>Alert</span>
+        </a>
       </li>
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/breadcrumb">Breadcrumb</a>
+        <a role="button" routerLink="/main/demo/breadcrumb">
+          <i class="fa fa-circle-o"></i>
+          <span>Breadcrumb</span>
+        </a>
       </li>
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/button">Button</a>
+        <a role="button" routerLink="/main/demo/button">
+          <i class="fa fa-circle-o"></i>
+          <span>Button</span>
+        </a>
       </li>
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/carousel">Carousel</a>
+        <a role="button" routerLink="/main/demo/carousel">
+          <i class="fa fa-circle-o"></i>
+          <span>Carousel</span>
+        </a>
       </li>
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/checkbox">Checkbox</a>
+        <a role="button" routerLink="/main/demo/checkbox">
+          <i class="fa fa-circle-o"></i>
+          <span>Checkbox</span>
+        </a>
       </li>
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/collapse">Collapse</a>
+        <a role="button" routerLink="/main/demo/collapse">
+          <i class="fa fa-circle-o"></i>
+          <span>Collapse</span>
+        </a>
       </li>
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/datepicker">Datepicker</a>
+        <a role="button" routerLink="/main/demo/datepicker">
+          <i class="fa fa-circle-o"></i>
+          <span>Datepicker</span>
+        </a>
       </li>
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/dropdown">Dropdown</a>
+        <a role="button" routerLink="/main/demo/dropdown">
+          <i class="fa fa-circle-o"></i>
+          <span>Dropdown</span>
+        </a>
       </li>
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/form">Form</a>
+        <a role="button" routerLink="/main/demo/form">
+          <i class="fa fa-circle-o"></i>
+          <span>Form</span>
+        </a>
       </li>
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/modal">Modal</a>
+        <a role="button" routerLink="/main/demo/modal">
+          <i class="fa fa-circle-o"></i>
+          <span>Modal</span>
+        </a>
       </li>
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/popover">Popover</a>
+        <a role="button" routerLink="/main/demo/popover">
+          <i class="fa fa-circle-o"></i>
+          <span>Popover</span>
+        </a>
       </li>
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/tab">Tab</a>
+        <a role="button" routerLink="/main/demo/tab">
+          <i class="fa fa-circle-o"></i>
+          <span>Tab</span>
+        </a>
       </li>
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/table">Table</a>
+        <a role="button" routerLink="/main/demo/table">
+          <i class="fa fa-circle-o"></i>
+          <span>Table</span>
+        </a>
       </li>
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/timepicker">Timepicker</a>
+        <a role="button" routerLink="/main/demo/timepicker">
+          <i class="fa fa-circle-o"></i>
+          <span>Timepicker</span>
+        </a>
       </li>
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/tooltip">Tooltip</a>
+        <a role="button" routerLink="/main/demo/tooltip">
+          <i class="fa fa-circle-o"></i>
+          <span>Tooltip</span>
+        </a>
       </li>
     </ul>
   </div>
