--- a/public/css/px-styles/content.css
+++ b/public/css/px-styles/content.css
@@ -1,4 +1,7 @@
-.content {
+/*****************************/
+/* content
+/****************************/
+.px-content {
     margin-left: 200px;
     padding-top: 65px;
     padding-left: 15px;
@@ -7,7 +10,7 @@
 }
 
 @media (max-width: 767px) {
-    .content {
+    .px-content {
         margin-left: 0;
     }
 }
