--- a/src/app/main/full.component.html
+++ b/src/app/main/full.component.html
@@ -1,5 +1,5 @@
 <px-navbar (collapse)="collapse($event)"></px-navbar>
-<yk-sidebar [isCollapsed]="isCollapsed"></yk-sidebar>
+<px-sidebar [isCollapsed]="isCollapsed"></px-sidebar>
 <div class="px-content" [class.px-sidebar-collapsed-content]="isCollapsed">
     <router-outlet></router-outlet>
 </div>
