--- a/src/app/main/sidebar/sidebar.component.html
+++ b/src/app/main/sidebar/sidebar.component.html
@@ -3,91 +3,91 @@
   <div class="px-sidebar">
     <ul class="px-sidebar-menu">
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/alert">
+        <a role="button" routerLink="/main/components/alert">
           <i class="fa fa-circle-o"></i>
           <span>Alert</span>
         </a>
       </li>
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/breadcrumb">
+        <a role="button" routerLink="/main/components/breadcrumb">
           <i class="fa fa-circle-o"></i>
           <span>Breadcrumb</span>
         </a>
       </li>
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/button">
+        <a role="button" routerLink="/main/components/button">
           <i class="fa fa-circle-o"></i>
           <span>Button</span>
         </a>
       </li>
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/carousel">
+        <a role="button" routerLink="/main/components/carousel">
           <i class="fa fa-circle-o"></i>
           <span>Carousel</span>
         </a>
       </li>
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/checkbox">
+        <a role="button" routerLink="/main/components/checkbox">
           <i class="fa fa-circle-o"></i>
           <span>Checkbox</span>
         </a>
       </li>
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/collapse">
+        <a role="button" routerLink="/main/components/collapse">
           <i class="fa fa-circle-o"></i>
           <span>Collapse</span>
         </a>
       </li>
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/datepicker">
+        <a role="button" routerLink="/main/components/datepicker">
           <i class="fa fa-circle-o"></i>
           <span>Datepicker</span>
         </a>
       </li>
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/dropdown">
+        <a role="button" routerLink="/main/components/dropdown">
           <i class="fa fa-circle-o"></i>
           <span>Dropdown</span>
         </a>
       </li>
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/form">
+        <a role="button" routerLink="/main/components/form">
           <i class="fa fa-circle-o"></i>
           <span>Form</span>
         </a>
       </li>
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/modal">
+        <a role="button" routerLink="/main/components/modal">
           <i class="fa fa-circle-o"></i>
           <span>Modal</span>
         </a>
       </li>
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/popover">
+        <a role="button" routerLink="/main/components/popover">
           <i class="fa fa-circle-o"></i>
           <span>Popover</span>
         </a>
       </li>
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/tab">
+        <a role="button" routerLink="/main/components/tab">
           <i class="fa fa-circle-o"></i>
           <span>Tab</span>
         </a>
       </li>
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/table">
+        <a role="button" routerLink="/main/components/table">
           <i class="fa fa-circle-o"></i>
           <span>Table</span>
         </a>
       </li>
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/timepicker">
+        <a role="button" routerLink="/main/components/timepicker">
           <i class="fa fa-circle-o"></i>
           <span>Timepicker</span>
         </a>
       </li>
       <li routerLinkActive="active">
-        <a role="button" routerLink="/main/demo/tooltip">
+        <a role="button" routerLink="/main/components/tooltip">
           <i class="fa fa-circle-o"></i>
           <span>Tooltip</span>
         </a>
