--- a/src/app/main/navbar/navbar.component.html
+++ b/src/app/main/navbar/navbar.component.html
@@ -22,7 +22,7 @@
     <a class="px-navbar-link" role="button">
       全局CSS样式
     </a>
-    <a class="px-navbar-link" role="button">
+    <a class="px-navbar-link" role="button" (click)="switch('components')">
       Angular2组件库
     </a>
   </nav>
