--- a/src/app/main/navbar/navbar.component.html
+++ b/src/app/main/navbar/navbar.component.html
@@ -19,7 +19,7 @@
     <a class="px-navbar-link" role="button">
       起步
     </a>
-    <a class="px-navbar-link" role="button">
+    <a class="px-navbar-link" role="button" (click)="switch('css')">
       全局CSS样式
     </a>
     <a class="px-navbar-link" role="button" (click)="switch('components')">
