--- a/src/app/main/sidebar/sidebar.component.html
+++ b/src/app/main/sidebar/sidebar.component.html
@@ -2,6 +2,7 @@
        [class.px-sidebar-collapsed]="isCollapsed">
   <div class="px-sidebar">
     <px-sidebar-components *ngIf="switchSidebar === 'components'"></px-sidebar-components>
+    <px-sidebar-css *ngIf="switchSidebar === 'css'"></px-sidebar-css>
   </div>
 </aside>
 
