--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,3 +1,10 @@
 <main class="px-banner">
-
+  <div class="px-banner-container">
+    <span class="px-banner-title">
+      PaletX UI
+    </span>
+    <p class="px-banner-subtitle">
+      The Next Generation ZTE Web UI & Angular2 Components
+    </p>
+  </div>
 </main>
