--- a/public/css/px-styles/banner.css
+++ b/public/css/px-styles/banner.css
@@ -14,3 +14,20 @@
     background-image: linear-gradient(to bottom, #563d7c 0, #6f5499 100%);
     background-repeat: repeat-x;
 }
+
+.px-banner-container {
+    width: 900px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+
+.px-banner-title {
+    font-size: 96px;
+    color: #fff;
+}
+
+.px-banner-subtitle {
+    font-size: 30px;
+    color: #fff;
+    margin: 30px 0 auto;
+}
