--- a/public/css/px-styles/sidebar.css
+++ b/public/css/px-styles/sidebar.css
@@ -14,7 +14,7 @@
 
 .px-sidebar {
     position: relative;
-    background-color: #f9fafc;
+    background-color: #f3f3f3;
     width: 217px;
     height: 100%;
     padding-bottom: 10px;
