--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,5 +1,8 @@
 <main class="px-banner">
   <div class="px-banner-container">
+    <span class="px-banner-logo">
+      <img src="../../../../public/images/PaletX-logo.svg">
+    </span>
     <span class="px-banner-title">
       PaletX UI
     </span>
