--- a/src/app/main/navbar/navbar.component.html
+++ b/src/app/main/navbar/navbar.component.html
@@ -1,14 +1,14 @@
 <header class="px-header">
   <a role="button" class="logo-mini hidden-md-up" (click)="switch('home')" routerLink="/main">
     <span>
-      <img class="logo-img" src="../../../../public/images/PaletX-logo.png">
-      <b>PX</b>
+      <img class="logo-img" src="../../../../public/images/PaletX-logo.svg">
+      PX
     </span>
   </a>
   <a role="button" class="logo-lg hidden-sm-down" (click)="switch('home')" routerLink="/main">
     <span>
-      <img class="logo-img" src="../../../../public/images/PaletX-logo.png">
-      <b>PaletX</b> UI
+      <img class="logo-img" src="../../../../public/images/PaletX-logo.svg">
+      PaletX UI
     </span>
   </a>
 
