--- a/public/css/px-styles/header.css
+++ b/public/css/px-styles/header.css
@@ -12,7 +12,7 @@
 
 .px-header .logo-mini {
     background-color: #2c3e50;
-    color: #fff;
+    color: #00abff;
     display: block;
     float: left;
     height: 50px;
@@ -32,7 +32,7 @@
 
 .px-header .logo-lg {
     background-color: #2c3e50;
-    color: #fff;
+    color: #00abff;
     display: block;
     float: left;
     height: 50px;
