--- a/public/css/px-styles/banner.css
+++ b/public/css/px-styles/banner.css
@@ -3,7 +3,7 @@
 /****************************/
 .px-banner {
     position: fixed;
-    padding: 100px 0;
+    padding: 150px 0 0 0;
     top: 50px;
     left: 0;
     right: 0;
