--- a/src/app/main/sidebar/sidebar-css/sidebar-css.component.html
+++ b/src/app/main/sidebar/sidebar-css/sidebar-css.component.html
@@ -5,4 +5,10 @@
       <span>概览</span>
     </a>
   </li>
+  <li routerLinkActive="active">
+    <a role="button" routerLink="/main/css/button">
+      <i class="fa fa-circle-o"></i>
+      <span>button</span>
+    </a>
+  </li>
 </ul>
