--- a/src/app/main/sidebar/sidebar-css/sidebar-css.component.html
+++ b/src/app/main/sidebar/sidebar-css/sidebar-css.component.html
@@ -8,7 +8,7 @@
   <li routerLinkActive="active">
     <a role="button" routerLink="/main/css/button">
       <i class="fa fa-circle-o"></i>
-      <span>button</span>
+      <span>Button</span>
     </a>
   </li>
 </ul>
