--- a/public/css/px-styles/content.css
+++ b/public/css/px-styles/content.css
@@ -1,20 +1,56 @@
 /*****************************/
 /* content
 /****************************/
-.px-content {
+.px-content-wrapper {
     margin-left: 200px;
-    padding-top: 65px;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-bottom: 15px;
+    padding-top: 50px;
+    padding-left: 0;
+    padding-right: 0;
+    padding-bottom: 0;
 }
 
 @media (max-width: 767px) {
-    .px-content {
+    .px-content-wrapper {
         margin-left: 0;
     }
 }
 
 .px-sidebar-collapsed-content {
     margin-left: 0;
+}
+
+.px-content-header {
+    position: relative;
+    border-bottom: 1px solid #eeeeee;
+    padding-left: 40px;
+    height: 110px;
+}
+
+.px-content-header h1 {
+    font-size: 24px;
+    position: absolute;
+    top: 50px;
+    color: #4d5761;
+}
+
+.px-content-header small {
+    font-size: 12px;
+    position: absolute;
+    top: 86px;
+    color: #7c868d;
+}
+
+.px-content {
+    position: relative;
+    padding-left: 40px;
+}
+
+.px-content h2 {
+    font-size: 18px;
+    color: #4d5761;
+    padding: 20px 0;
+}
+
+.px-content p {
+    font-size: 14px;
 }
