--- a/src/app/css/button/css-button.component.html
+++ b/src/app/css/button/css-button.component.html
@@ -6,6 +6,16 @@
 <section class="px-content">
   <h2>场景一：标题旁的按钮</h2>
   <p>单个操作</p>
-  <button class="btn px-btn px-btn-default">default</button>
-  <button class="btn px-btn px-btn-primary">primary</button>
+  <button class="btn px-btn px-btn-default">单个操作</button>
+  <button class="btn px-btn px-btn-default" disabled>单个操作</button>
+  <div class="h-20"></div>
+  <p>代码示例</p>
+  <pre class="px-pre">
+    <code class="px-code">
+      &lt;button class="btn px-btn px-btn-default">单个操作&lt;/button>
+      &lt;button class="btn px-btn px-btn-default" disabled>单个操作&lt;/button>
+    </code>
+  </pre>
+  <p>多个操作</p>
+  <button class="btn px-btn px-btn-default px-btn-more">更多操作<i class="fa fa-caret-down"></i></button>
 </section>
