--- a/public/css/px-styles/content.css
+++ b/public/css/px-styles/content.css
@@ -54,3 +54,17 @@
 .px-content p {
     font-size: 14px;
 }
+
+.px-pre {
+    background-color: #333;
+    color: #fff;
+    font-size: 12px;
+    line-height: 1.5;
+    padding: 10px;
+    max-height: 300px;
+    width: 80%;
+    overflow: auto !important;
+    border-radius: 4px;
+    word-break: break-all;
+    word-wrap: break-word;
+}
