--- a/public/css/px-styles/bootstrap.css
+++ b/public/css/px-styles/bootstrap.css
@@ -9,3 +9,13 @@
 .btn.disabled, .btn:disabled {
     opacity: .5;
 }
+
+.dropdown-toggle:after {
+    border-top: 3px solid;
+    border-right: 3px solid transparent;
+    border-left: 3px solid transparent;
+}
+
+.dropdown-menu {
+    min-width: inherit;
+}
